--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 				</ul>
 			</nav><!-- Cierra .main-nav! -->
 		</div>
+
+		<!-- 
+			COMENTARIO
+
+		-->
 		
 		<div class="wrapper">
 			<div class="main-header">
